Response evaluation using LLM as a judge and cosine similarity

--- a/response_evaluation.ipynb
+++ b/response_evaluation.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 128,
    "id": "d85de2df-2be3-47a5-8e13-881b10d85ed8",
    "metadata": {},
    "outputs": [],
@@ -28,12 +28,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 131,
    "id": "00160aaa-9cca-4f33-a42e-8ee4b0db7855",
    "metadata": {},
    "outputs": [],
    "source": [
-    "client = Groq(api_key=\"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\")\n"
+    "client = Groq(api_key=groq_api_key)\n",
+    "\n"
    ]
   },
   {
